<resources>
    <string name="app_name">SoccerScoreCounter</string>
    <string name="TeamBName">FC Barcelona</string>
    <string name="TeamAName">FC Barcelona</string>
    <string name="ScoreSummary_start">0 : 0</string>
    <string name="enter_teams_dialog">Enter your soccer teams names</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="start">start</string>
    <string name="change_names">change teams names</string>
    <string name="reset_game">reset game</string>
    <string name="yellow_card">yellow card</string>
    <string name="red_card">red card</string>
    <string name="goal">+ goal</string>
    <string name="zero_value">0</string>
    <string name="zero">0</string>
</resources>
