<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/dark_green"
        android:text="@string/enter_teams_dialog" />

    <EditText
        android:id="@+id/etTeamA"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/team_a"
/>

    <EditText
        android:id="@+id/etTeamB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/team_b"
        android:inputType="textPersonName" />
    <Button
        android:textSize="23sp"
        android:layout_margin="8dp"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/text_white"
        android:fontFamily="@font/roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/goal_button"/>

</LinearLayout>