<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"

    android:orientation="vertical"
    tools:context="com.example.android.soccerscorecounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


        <TextView
            android:id="@+id/ScoreSummary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/soccerscorecounter_bg"
            android:fontFamily="@font/roboto_light"
            android:text="@string/ScoreSummary_start"
            android:textAlignment="center"
            android:textColor="@color/text_white"
            android:textSize="112sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/buttons_group_margin"
        android:paddingRight="@dimen/buttons_group_margin"
        android:paddingTop="@dimen/small_padding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TeamA_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/team_a"
                    android:textColor="@color/text_white"
                    android:textSize="12sp"

                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/TeamA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/TeamAName"
                    android:textColor="@color/text_white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TeamB_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/team_b"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/text_white"
                    android:textSize="12sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/TeamB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/TeamBName"

                    android:textAlignment="viewEnd"
                    android:textColor="@color/text_white"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/buttons_group_margin"
        android:layout_marginLeft="@dimen/buttons_group_margin"
        android:layout_marginRight="@dimen/buttons_group_margin"
        android:layout_weight="7"
        android:background="@drawable/layout_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/small_padding"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/goalTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/goal_button"
                    android:onClick="goalA"
                    android:text="@string/goal"
                    android:textAllCaps="false"
                    android:textColor="@color/text_white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teamARedCardCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/small_padding"
                        android:paddingRight="@dimen/small_padding"
                        android:text="@string/zero_value"
                        android:textColor="@color/dark_red"
                        android:textSize="23sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:background="@drawable/red_card_button"
                        android:fontFamily="@font/roboto"
                        android:onClick="redCardA"
                        android:text="@string/red_card"
                        android:textAllCaps="false"
                        android:textColor="@color/text_white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teamAYellowCardCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/small_padding"
                        android:paddingRight="@dimen/small_padding"
                        android:text="@string/zero_value"
                        android:textColor="@color/dark_yellow"
                        android:textSize="23sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:background="@drawable/yellow_card_button"
                        android:fontFamily="@font/roboto"
                        android:onClick="yellowCardA"
                        android:text="@string/yellow_card"
                        android:textAllCaps="false"
                        android:textColor="@color/text_white" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/small_padding"
                    tools:ignore="NestedWeights">

                    <Button
                        android:id="@+id/goalTeamB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/goal_button"
                        android:onClick="goalB"
                        android:text="@string/goal"
                        android:textAllCaps="false"
                        android:textColor="@color/text_white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_padding"
                            android:layout_weight="4"
                            android:background="@drawable/red_card_button"
                            android:fontFamily="@font/roboto"
                            android:onClick="redCardB"
                            android:text="@string/red_card"
                            android:textAllCaps="false"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/teamBRedCardCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="@dimen/small_padding"
                            android:paddingRight="@dimen/small_padding"
                            android:text="@string/zero_value"
                            android:textColor="@color/dark_red"
                            android:textSize="23sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_padding"
                            android:layout_weight="4"
                            android:background="@drawable/yellow_card_button"
                            android:fontFamily="@font/roboto"
                            android:onClick="yellowCardB"
                            android:text="@string/yellow_card"
                            android:textAllCaps="false"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/teamBYellowCardCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="@dimen/small_padding"
                            android:paddingRight="@dimen/small_padding"
                            android:text="@string/zero_value"
                            android:textColor="@color/dark_yellow"
                            android:textSize="23sp" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/change_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/resetBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="@dimen/bottom_buttons_margin"
            android:layout_marginRight="@dimen/bottom_buttons_margin"
            android:background="@drawable/reset_button"
            android:fontFamily="@font/roboto_light"
            android:text="@string/change_names"
            android:textAllCaps="false"
            android:textColor="@color/darker_gray" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/bottom_buttons_margin"
            android:background="@drawable/reset_button"
            android:fontFamily="@font/roboto_light"
            android:onClick="resetButton"
            android:text="@string/reset_game"
            android:textAllCaps="false"
            android:textColor="@color/darker_gray" />
    </RelativeLayout>


</LinearLayout>
